clusters/talos/monitoring/content/ingress-alertmanager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.t.efgh.nl
    http:
      paths:
      - backend:
          service:
            name: alertmanager-operated
            port:
              name: web
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - alertmanager.t.efgh.nl
    secretName: alertmanager-tls
